--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sb": "npx supabase gen types typescript --project-id vrhjixxfglifchizmmnv --schema public > ./src/schema.ts"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.6",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@supabase/auth-helpers-nextjs": "^0.5.6",
@@ -26,6 +27,8 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "sse": "github:mpetazzoni/sse.js",
     "stripe": "^11.14.0",
     "superjson": "1.9.1",
     "uuid": "^9.0.0",
